# atmosphere

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/workflows/: book.yml  ci.yml  publish.yml
atmosphere/: Cargo.toml
atmosphere-core/: Cargo.toml
atmosphere-core/src/: bind.rs  error.rs  lib.rs  query.rs  rel.rs  relationships.rs  runtime.rs  schema.rs  testing.rs
atmosphere-core/src/hooks/: mod.rs
atmosphere-core/src/runtime/: mod.rs  sql.rs
atmosphere-core/src/schema/: create.rs  delete.rs  mod.rs  read.rs  update.rs
atmosphere-extras/: Cargo.toml
atmosphere-extras/src/: lib.rs
atmosphere-extras/src/postgis/: geometry.rs  mod.rs
atmosphere-extras/tests/: geometry.rs
atmosphere-macros/: Cargo.toml
atmosphere-macros/src/: database.rs  lib.rs  table.rs
atmosphere-macros/src/derive/: bindings.rs  hooks.rs  mod.rs  relationships.rs  table.rs
atmosphere-macros/src/derive/queries/: mod.rs  unique.rs
atmosphere-macros/src/hooks/: mod.rs
atmosphere-macros/src/schema/: column.rs  keys.rs  mod.rs  table.rs
atmosphere-macros/src/sql/: query.rs
atmosphere/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  index.md
docs/src/getting-started/: crud.md  index.md  installation.md  queries.md  schema.md
docs/src/traits/: create.md  delete.md  index.md  read.md  update.md
examples/blog/: main.rs
examples/blog/migrations/: 20230701234331_blog.up.sql
examples/forest/: main.rs
examples/forest/migrations/: 20230701234331_forest.up.sql
src/: lib.rs
tests/: lib.rs  postgres.yml
tests/db/: crud.rs
tests/db/migrations/: 20231101223300_forest.sql
tests/json_attr/: mod.rs  non_nullable.rs  nullable.rs
tests/json_attr/migrations/: 20251019111200_with_json.sql
tests/postgis/: mod.rs
