[workspace]
members = [
    ".",
    "atmosphere-macros",
    "atmosphere-core",
]

[workspace.package]
version = "0.1.3"
license = "Apache-2.0"
edition = "2021"
authors = ["Mara Schulke <mara@hemisphere.studio>"]
description = "A lightweight sql framework for sustainable database reliant systems"
repository = "https://github.com/mara-schulke/atmosphere"
keywords = ["sqlx", "postgres", "database", "orm", "backend"]

[workspace.dependencies]
atmosphere-core = { version = "=0.1.3", path = "atmosphere-core" }
atmosphere-macros = { version = "=0.1.3", path = "atmosphere-macros" }
async-trait = "0.1"
lazy_static = "1"
sqlx = { version = "0.7", features = ["chrono"] }
thiserror = "1"

[package]
name = "atmosphere"
readme = "README.md"
description = "A lightweight sql framework for sustainable database reliant systems"
documentation = "https://docs.rs/atmosphere"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
atmosphere-core.workspace = true
atmosphere-macros.workspace = true
async-trait.workspace = true
sqlx.workspace = true

[features]
default = []
mysql = ["atmosphere-core/mysql"]
postgres = ["atmosphere-core/postgres"]
sqlite = ["atmosphere-core/sqlite"]

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "sqlite", "mysql", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
tokio-test = "0"

[[example]]
name = "forest"
path = "examples/forest/main.rs"

[[example]]
name = "blog"
path = "examples/blog/main.rs"

[[test]]
name = "integration"
path = "tests/lib.rs"
test = true
