[workspace]
members = [".", "atmosphere-core", "atmosphere-macros", "atmosphere-extras"]

[workspace.package]
version = "0.4.0"
license = "Apache-2.0"
edition = "2024"
exclude = ["/.github", "/tests"]
authors = [
    "Florian Eich <florian.eich@helsing.ai>",
    "Mara Schulke <mara.schulke@helsing.ai>",
    "Nicolas Vizzari-Trinquier <nicolas.vizzari@helsing.ai>",
]
description = "A lightweight SQL framework for sustainable database reliant systems"
repository = "https://github.com/helsing-ai/atmosphere"
keywords = ["sqlx", "postgres", "database", "orm", "backend"]

[workspace.dependencies]
atmosphere-core = { version = "=0.4.0", path = "atmosphere-core" }
atmosphere-extras = { version = "=0.4.0", path = "atmosphere-extras" }
atmosphere-macros = { version = "=0.4.0", path = "atmosphere-macros" }
async-trait = "0.1"
lazy_static = "1"
sqlx = { version = "0.8", default-features = false, features = ["chrono"] }
thiserror = "2"

[package]
name = "atmosphere"
readme = "README.md"
description = "A lightweight SQL framework for sustainable database reliant systems"
documentation = "https://docs.rs/atmosphere"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
atmosphere-core.workspace = true
atmosphere-extras.workspace = true
atmosphere-macros.workspace = true
async-trait.workspace = true
sqlx.workspace = true

[features]
default = []
mysql = ["atmosphere-core/mysql", "atmosphere-macros/mysql"]
postgres = ["atmosphere-core/postgres", "atmosphere-macros/postgres"]
sqlite = ["atmosphere-core/sqlite", "atmosphere-macros/sqlite"]
postgis = ["postgres", "atmosphere-extras/postgis"]
serde = ["atmosphere-extras/serde"]

[dev-dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "any",
    "sqlite",
    "mysql",
    "postgres",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0"

[[example]]
name = "forest"
path = "examples/forest/main.rs"
required-features = ["sqlite"]

[[example]]
name = "blog"
path = "examples/blog/main.rs"
required-features = ["sqlite"]

[[test]]
name = "integration"
path = "tests/lib.rs"
test = true
required-features = ["postgres"]

[package.metadata.docs.rs]
features = ["postgres"]

[workspace.lints.clippy]
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
unwrap_used = "warn"
wildcard_imports = "warn"
