[package]
name = "atmosphere-core"
description = "Core trait system and types for the atmosphere project"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["runtime-tokio-rustls", "postgres"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
async-trait.workspace = true
sqlx.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
miette = "5.10.0"
