[package]
name = "atmosphere-extras"
description = "Implementations for additional database types."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["postgis"]
postgis = ["postgres", "dep:geozero", "dep:geo-types"]
postgres = ["sqlx/postgres"]
serde = ["dep:serde"]

[dependencies]
geo-types = { version = "0.7.17", optional = true }
geozero = { version = "0.14.0", features = [
    "with-postgis-sqlx",
], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
sqlx.workspace = true
thiserror.workspace = true

[package.metadata.docs.rs]
features = ["postgres", "postgis"]
