[package]
name = "atmosphere"
readme = "README.md"
description = "Atmosphere for sustainable growth of sqlx projects"
documentation = "https://docs.rs/atmosphere"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["runtime-tokio-rustls", "postgres"]
runtime-actix-native-tls = ["sqlx/runtime-actix-native-tls"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-actix-rustls = ["sqlx/runtime-actix-rustls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
sqlx = { version = "0.6", features = ["chrono"] }
thiserror = "1"

[dev-dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio-test = "0"
